<resources>
    <string name="app_name">AndroidUI</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="material_design">Material Design</string>
    <string name="palette">Palette</string>
    <string name="vibrant">vibrant</string>
    <string name="virbrant_dark">virbrant dark</string>
    <string name="virbrant_light">virbrant light</string>
    <string name="muted">muted</string>
    <string name="muted_dark">muted dark</string>
    <string name="muted_light">muted light</string>
    <string name="palette_title_text">带颜色透明标题栏</string>
    <string name="tablayout">tablayout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="translucent">沉浸式状态栏</string>
    <string name="title_activity_draw_layout">DrawLayoutActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigationbar">NavigationBar</string>
    <string name="cardview">cardview</string>
    <string name="fab">FloatingActionButton</string>
    <string name="coordinatorlayout">CoordinatorLayout_FloatingActionButton</string>
    <string name="appbarlayout">AppBarLayout</string>
    <string name="collapsingtoolbarlayout">CollapsingToolbarLayout</string>
    <string name="bottomnavigationview">BottomNavigationView</string>
    <string name="textinputlayout">TextInputLayout</string>
    <string name="snackbar">SnackBar</string>
    <string name="navigationview">NavigationView</string>
    <string name="bottomsheet">BottomSheet</string>
</resources>
